# MailPal

./: Cargo.toml  README.md  build.rs  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: error.rs  logger.rs  main.rs  modem.rs  network.rs  pdp.rs  registration.rs
