[package]
name = "nrf9151-modem"
version = "0.1.0"
edition = "2021"

[dependencies]
# Embassy framework - using git for compatible versions
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["tick-hz-32_768"] }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", features = ["nrf9160-s", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }

# Embassy modem driver for nRF91 series
embassy-net-nrf91 = { git = "https://github.com/embassy-rs/embassy" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", features = ["tcp", "udp", "dns", "proto-ipv4", "medium-ip"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }

# Cortex-M runtime and panic handling
cortex-m = { version = "0.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7"
panic-halt = "1.0"

# Logging - using UART
embedded-io = "0.6"
embedded-io-async = "0.6"
heapless = "0.8"

# Async utilities
static_cell = "2"
portable-atomic = { version = "1", features = ["critical-section"] }

[profile.release]
debug = 2
lto = true
opt-level = "s"

[profile.dev]
debug = 2
opt-level = 1
